# backmatic

./: .travis.yml  Cargo.toml  IMPROVEMENTS.md  Justfile  PLAN.md  README.md  prompt.md
.github/workflows/: ci.yml  integration.yml
docker/: Dockerfile
docs/: EDITOR.md  TESTING.md
examples/: backmatic.yml  minimal.yml
schema/: backmatic.schema.json
src/: app.rs  borg.rs  cli.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  mount.rs  restic.rs  rsync.rs  shutdown.rs
src/config/: defaults.rs  load.rs  mod.rs  schema.rs  types.rs  validate.rs
src/healthcheck/: mod.rs
src/inject/: clock.rs  commands.rs  http.rs  mod.rs  paths.rs  process.rs
src/mount/: dest.rs  mod.rs  origin.rs  registry.rs  src_remote.rs
src/retention/: mod.rs
src/runners/: borg.rs  mod.rs  restic.rs  rsync.rs
src/runners/database/: mod.rs  mysql.rs  postgres.rs
src/scheduler/: cycle.rs  mod.rs
src/verify/: mod.rs
tests/: integration_borg.rs  integration_misc.rs  integration_restic.rs  integration_rsync.rs
tests/common/: mod.rs
