[package]
name = "backmatic"
version = "0.1.0"
authors = ["Heiko, Riemer <heiko@eheiko.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.1.18", features = [ "cargo" ] }
command = "0.0.0"
libc = "0.2.126"
log = "0.4.17"
regex = "1.5.6"
simplelog = "0.12.0"
single-instance = "0.3.3"
threadpool = "1.8.1"
time = "0.3.9"
yaml-rust = "0.4.5"
