[package]
name = "backmatic"
version = "0.1.0"
authors = ["Heiko, Riemer <heiko@eheiko.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = [ "derive", "env" ] }
command = "0.0.0"
libc = "0.2"
log = "0.4"
regex = "1.10"
simplelog = "0.12"
single-instance = "0.3"
threadpool = "1.8"
time = "0.3"
yaml-rust = "0.4"
