[package]
name = "backmatic"
version = "0.2.0"
authors = ["Heiko, Riemer <heiko@eheiko.net>"]
edition = "2021"
description = "Centralized backup orchestrator for rsync, borg, restic, and databases"
license = "MIT"

[lib]
name = "backmatic"
path = "src/lib.rs"

[[bin]]
name = "backmatic"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive", "env"] }
dirs = "6.0"
libc = "0.2"
log = "0.4"
num_cpus = "1.16"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
simplelog = "0.12"
single-instance = "0.3"
tempfile = "3.14"
thiserror = "2.0"
threadpool = "1.8"
time = "0.3"
jsonschema = "0.29"
sha2 = "0.10"
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
tempfile = "3.14"

[features]
default = []
integration-tests = []
integration-luks = ["integration-tests"]
integration-ssh = ["integration-tests"]
integration-db = ["integration-tests"]
